# raumplaner

./: Cargo.toml  help.md  ideas.txt
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
api/: Cargo.toml
api/src/: auth.rs  config.rs  errors.rs  main.rs
app/: Cargo.toml
backend/api/: Cargo.toml
backend/api/src/: config.rs  errors.rs  main.rs
backend/entity/src/: user.rs
backend/migration/src/: m20230129_163140_create_user_table.rs
backend/rp_core/: Cargo.toml
core/: Cargo.toml
entity/: Cargo.toml
entity/src/: auth.rs  lib.rs  prelude.rs  room.rs  sea_orm_active_enums.rs  user.rs
entity/src/entities/: mod.rs  sea_orm_active_enums.rs  user.rs
frontend/: middleware.js  package-lock.json  package.json
frontend/app/: HomePage.js  layout.js  page.js
frontend/app/login/: Login.js  page.js
frontend/app/rooms/: Rooms.js  page.js
frontend/src/hooks/: useCurrentUser.js  useLogin.js
frontend/src/services/: auth.service.js  index.js
frontend/src/util/: headers.js
migration/: Cargo.toml
migration/src/: lib.rs  m20220101_000001_create_table.rs  m20230129_163140_create_user_table.rs  m20230130_142703_seed.rs
