[package]
name = "api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.4", features = ["headers"] }
hyper = { version = "0.14.23", features = ["full"] }
sea-orm = { version = "^0", features = ["sqlx-postgres", "runtime-tokio-rustls", "macros"] }
tokio = { version = "1.24.2", features = ["full"] }
tower = "0.4.13"
entity = { path = "../entity" }
migration = { path = "../migration" }
serde_json = "1.0.91"
jsonwebtoken = "8.2.0"
serde = { version = "1.0.152", features = ["derive"] }
once_cell = "1.17.0"
